Refactor index.html with style updates and new content
Updated styles and added new sections for advantages and contact.

--- a/index.html
+++ b/index.html
@@ -8,36 +8,38 @@
     body {
       margin: 0;
       font-family: 'Poppins', sans-serif;
-      background-color: #0d0d0d;
+      background-color: #0b0b0f;
       color: white;
-      text-align: center;
     }
     header {
-      background-color: #000;
-      padding: 20px;
+      background: #000;
+      text-align: center;
+      padding: 25px;
     }
     img.logo {
       width: 180px;
     }
-    h1 {
+    section {
+      text-align: center;
+      padding: 60px 20px;
+    }
+    h1, h2 {
       color: #c084fc;
-      font-size: 2.2em;
-      margin-top: 30px;
     }
     p {
-      max-width: 600px;
-      margin: 20px auto;
+      max-width: 700px;
+      margin: 15px auto;
       line-height: 1.6;
-      color: #ddd;
+      color: #ccc;
     }
     .btn {
       display: inline-block;
       margin-top: 20px;
-      padding: 12px 25px;
+      padding: 14px 28px;
       background: #a855f7;
       color: white;
       text-decoration: none;
-      border-radius: 8px;
+      border-radius: 10px;
       font-weight: bold;
       transition: background 0.3s;
     }
@@ -45,8 +47,9 @@
       background: #9333ea;
     }
     footer {
-      margin-top: 50px;
-      padding: 15px;
+      background: #000;
+      text-align: center;
+      padding: 20px;
       font-size: 0.9em;
       color: #888;
     }
@@ -57,17 +60,32 @@
     <img src="logo.png" alt="ShopIA logo" class="logo">
   </header>
 
-  <main>
+  <section id="inicio">
     <h1>Automação Inteligente para Supermercados</h1>
     <p>
       A <strong>ShopIA</strong> conecta o seu supermercado ao futuro.  
       Nosso bot de atendimento automatiza pedidos, agiliza o caixa e melhora a experiência dos clientes — tudo pelo WhatsApp.
     </p>
     <a href="https://wa.me/5599999999999" target="_blank" class="btn">Falar no WhatsApp</a>
-  </main>
+  </section>
+
+  <section id="vantagens">
+    <h2>Por que escolher a ShopIA?</h2>
+    <p>✅ Atendimento 100% automático 24h por dia.</p>
+    <p>✅ Receba pedidos direto no caixa.</p>
+    <p>✅ Sem fila, sem erros, mais vendas.</p>
+    <p>✅ Integração fácil com qualquer sistema de mercado.</p>
+  </section>
+
+  <section id="contato">
+    <h2>Entre em contato</h2>
+    <p>Quer testar o bot no seu supermercado?</p>
+    <p>Fale conosco pelo WhatsApp e veja a automação funcionando na prática.</p>
+    <a href="https://wa.me/5599999999999" target="_blank" class="btn">Testar Agora</a>
+  </section>
 
   <footer>
-    © 2025 ShopIA — Todos os direitos reservados.
+    © 2025 ShopIA — Automação Inteligente para Supermercados.
   </footer>
 </body>
 </html>
