--- a/index.html
+++ b/index.html
@@ -69,7 +69,6 @@
       border: 2px solid #a855f7;
       box-shadow: 0 0 10px #a855f7;
     }
-    /* Botão flutuante do WhatsApp */
     .whatsapp-float {
       position: fixed;
       bottom: 20px;
@@ -110,13 +109,13 @@
   <section id="sobre">
     <h2>Sobre a ShopIA</h2>
     <p>
-      A ShopIA nasceu com o propósito de revolucionar o varejo alimentar.  
-      Combinamos tecnologia de ponta com simplicidade para que qualquer mercado, pequeno ou grande, possa automatizar o atendimento e aumentar as vendas.
+      A ShopIA nasceu para revolucionar o varejo alimentar, unindo tecnologia e praticidade.  
+      Nosso sistema é fácil de usar, rápido de integrar e pronto para aumentar as vendas do seu mercado.
     </p>
     <div class="img-section">
-      <img src="https://cdn.pixabay.com/photo/2017/08/06/00/36/supermarket-2588024_960_720.jpg" alt="supermercado">
-      <img src="https://cdn.pixabay.com/photo/2020/05/29/19/12/ai-5231610_960_720.jpg" alt="inteligência artificial">
-      <img src="https://cdn.pixabay.com/photo/2016/10/22/17/09/chat-1767646_960_720.jpg" alt="chatbot">
+      <img src="https://i.imgur.com/tL3VYHv.jpeg" alt="Supermercado moderno">
+      <img src="https://i.imgur.com/lfbWqnl.jpeg" alt="Inteligência artificial bot">
+      <img src="https://i.imgur.com/W1vWZVG.jpeg" alt="Chatbot atendimento">
     </div>
   </section>
 
@@ -135,8 +134,8 @@
       Tudo isso sem precisar de atendente humano!
     </p>
     <div class="img-section">
-      <img src="https://cdn.pixabay.com/photo/2017/06/22/16/47/whatsapp-2438453_960_720.jpg" alt="whatsapp bot">
-      <img src="https://cdn.pixabay.com/photo/2020/06/15/15/41/automation-5300380_960_720.jpg" alt="automação supermercado">
+      <img src="https://i.imgur.com/ItQUw2t.jpeg" alt="WhatsApp bot">
+      <img src="https://i.imgur.com/PKG0PNV.jpeg" alt="Automação supermercado">
     </div>
   </section>
 
