--- a/index.html
+++ b/index.html
@@ -109,6 +109,10 @@
       color: #888;
       border-top: 1px solid #333;
     }
+
+    .test-free {
+      margin-top: 50px;
+    }
   </style>
 </head>
 <body>
@@ -122,17 +126,21 @@
       A <strong>ShopIA</strong> conecta o seu supermercado ao futuro.
       Nosso bot de atendimento automatiza pedidos, agiliza o caixa e melhora a experiência dos clientes — tudo pelo WhatsApp.
     </p>
-    <a href="https://wa.me/5599999999999" target="_blank" class="btn">Falar no WhatsApp</a>
+
+    <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20gostaria%20de%20saber%20mais%20sobre%20a%20ShopIA%20para%20meu%20supermercado!" target="_blank" class="btn">
+      Falar com Especialista
+    </a>
 
     <h2>Sobre a ShopIA</h2>
     <p>
-      A ShopIA nasceu para revolucionar o varejo alimentar, unindo tecnologia e praticidade. Nosso sistema é fácil de usar, rápido de integrar e pronto para aumentar as vendas do seu mercado.
+      A ShopIA nasceu para revolucionar o varejo alimentar, unindo tecnologia e praticidade.
+      Nosso sistema é fácil de usar, rápido de integrar e pronto para aumentar as vendas do seu mercado.
     </p>
 
     <div class="img-section">
-      <img src="https://images.unsplash.com/photo-1586201375761-83865001e17c?auto=format&fit=crop&w=800&q=80" alt="Supermercado moderno">
-      <img src="https://images.unsplash.com/photo-1605902711622-cfb43c4437d9?auto=format&fit=crop&w=800&q=80" alt="IA no atendimento">
-      <img src="https://images.unsplash.com/photo-1601597111063-3e06a0141b1b?auto=format&fit=crop&w=800&q=80" alt="Chatbot de mercado">
+      <img src="https://cdn.pixabay.com/photo/2017/01/23/11/31/supermarket-2009400_1280.jpg" alt="Supermercado moderno">
+      <img src="https://cdn.pixabay.com/photo/2020/04/03/06/53/artificial-intelligence-4998232_1280.jpg" alt="IA no atendimento">
+      <img src="https://cdn.pixabay.com/photo/2017/08/06/11/24/supermarket-2598692_1280.jpg" alt="Chatbot de mercado">
     </div>
 
     <h2>Por que escolher a ShopIA?</h2>
@@ -147,24 +155,30 @@
     <div class="plans">
       <div class="plan">
         <h3>Plano Básico</h3>
-        <p>Ideal para pequenos mercados que estão começando no digital.</p>
-        <p><strong>R$ 49/mês</strong></p>
-        <a href="https://wa.me/5599999999999" target="_blank" class="btn">Assinar</a>
+        <p>Ideal para pequenos mercados — até 100 pedidos por mês.</p>
+        <p><strong>R$ 79/mês</strong></p>
+        <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20assinar%20o%20Plano%20B%C3%A1sico%20de%20R$79%20com%20100%20pedidos%20mensais." target="_blank" class="btn">Assinar Plano Básico</a>
       </div>
 
       <div class="plan">
         <h3>Plano Avançado</h3>
-        <p>Mais automações, relatórios e suporte prioritário.</p>
-        <p><strong>R$ 99/mês</strong></p>
-        <a href="https://wa.me/5599999999999" target="_blank" class="btn">Assinar</a>
+        <p>Perfeito para quem precisa de mais desempenho — até 400 pedidos por mês.</p>
+        <p><strong>R$ 150/mês</strong></p>
+        <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20assinar%20o%20Plano%20Avan%C3%A7ado%20de%20R$150%20com%20400%20pedidos%20mensais." target="_blank" class="btn">Assinar Plano Avançado</a>
       </div>
 
       <div class="plan">
         <h3>Plano Premium</h3>
-        <p>Tudo ilimitado + integração completa com caixa e estoque.</p>
-        <p><strong>R$ 149/mês</strong></p>
-        <a href="https://wa.me/5599999999999" target="_blank" class="btn">Assinar</a>
+        <p>Pedidos ilimitados e integração completa com caixa e estoque.</p>
+        <p><strong>R$ 300/mês</strong></p>
+        <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20assinar%20o%20Plano%20Premium%20de%20R$300%20com%20pedidos%20ilimitados." target="_blank" class="btn">Assinar Plano Premium</a>
       </div>
+    </div>
+
+    <div class="test-free">
+      <h2>Teste Grátis por 7 Dias</h2>
+      <p>Experimente a ShopIA sem compromisso e descubra como podemos revolucionar seu atendimento.</p>
+      <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20testar%20a%20ShopIA%20gr%C3%A1tis%20por%207%20dias!" target="_blank" class="btn">Testar Grátis Agora</a>
     </div>
   </main>
 
