--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ShopIA - Automação Inteligente para Supermercados</title>
+  <title>ShopIA - Automação para Supermercados</title>
+  <link rel="icon" type="image/png" href="logo.png">
   <style>
     body {
       margin: 0;
@@ -15,28 +16,56 @@
 
     header {
       background-color: #000;
-      padding: 20px;
+      padding: 25px;
     }
 
     img.logo {
       width: 180px;
     }
 
-    h1, h2, h3 {
+    h1 {
       color: #c084fc;
+      font-size: 2.2em;
+      margin-top: 30px;
+    }
+
+    h2 {
+      color: #c084fc;
+      margin-top: 50px;
     }
 
     p {
       max-width: 700px;
-      margin: 15px auto;
+      margin: 20px auto;
       line-height: 1.6;
       color: #ddd;
+    }
+
+    .planos {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 25px;
+      margin-top: 30px;
+    }
+
+    .plano {
+      background-color: #1a1a1a;
+      border: 1px solid #a855f7;
+      border-radius: 12px;
+      width: 260px;
+      padding: 25px;
+      box-shadow: 0 0 12px #a855f777;
+    }
+
+    .plano h3 {
+      color: #a855f7;
     }
 
     .btn {
       display: inline-block;
       margin-top: 15px;
-      padding: 12px 25px;
+      padding: 10px 20px;
       background: #a855f7;
       color: white;
       text-decoration: none;
@@ -44,75 +73,40 @@
       font-weight: bold;
       transition: background 0.3s;
     }
+
     .btn:hover {
       background: #9333ea;
     }
 
-    .img-section {
+    .galeria {
       display: flex;
-      flex-wrap: wrap;
       justify-content: center;
-      gap: 20px;
-      margin: 40px 0;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 20px;
     }
 
-    .img-section img {
+    .galeria img {
       width: 300px;
-      height: 200px;
-      border-radius: 12px;
-      object-fit: cover;
-      border: 2px solid #c084fc;
-      box-shadow: 0 0 10px #a855f7;
-      transition: transform 0.3s;
-    }
-
-    .img-section img:hover {
-      transform: scale(1.05);
-    }
-
-    .plans {
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: center;
-      gap: 30px;
-      margin-top: 60px;
-    }
-
-    .plan {
-      background: #111;
-      border: 1px solid #a855f7;
-      border-radius: 16px;
-      padding: 25px;
-      width: 280px;
-      box-shadow: 0 0 15px #a855f7;
-      transition: transform 0.3s;
-    }
-
-    .plan:hover {
-      transform: translateY(-8px);
-    }
-
-    .plan h3 {
-      color: #c084fc;
-      margin-bottom: 10px;
-    }
-
-    .plan p {
-      color: #bbb;
-      font-size: 0.95em;
+      border-radius: 10px;
+      border: 2px solid #a855f7;
     }
 
     footer {
-      margin-top: 70px;
-      padding: 15px;
+      margin-top: 60px;
+      padding: 20px;
+      background: #000;
+      color: #aaa;
       font-size: 0.9em;
-      color: #888;
-      border-top: 1px solid #333;
     }
 
-    .test-free {
-      margin-top: 50px;
+    .social-icons img {
+      width: 30px;
+      margin: 0 10px;
+      vertical-align: middle;
+      filter: invert(82%) sepia(60%) saturate(523%) hue-rotate(217deg);
     }
+
   </style>
 </head>
 <body>
@@ -123,67 +117,53 @@
   <main>
     <h1>Automação Inteligente para Supermercados</h1>
     <p>
-      A <strong>ShopIA</strong> conecta o seu supermercado ao futuro.
-      Nosso bot de atendimento automatiza pedidos, agiliza o caixa e melhora a experiência dos clientes — tudo pelo WhatsApp.
+      A <strong>ShopIA</strong> transforma o atendimento do seu supermercado com inteligência artificial.  
+      Nosso bot automatiza pedidos, agiliza o caixa e melhora a experiência dos clientes — tudo direto no WhatsApp.
     </p>
-
-    <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20gostaria%20de%20saber%20mais%20sobre%20a%20ShopIA%20para%20meu%20supermercado!" target="_blank" class="btn">
-      Falar com Especialista
-    </a>
 
     <h2>Sobre a ShopIA</h2>
     <p>
-      A ShopIA nasceu para revolucionar o varejo alimentar, unindo tecnologia e praticidade.
-      Nosso sistema é fácil de usar, rápido de integrar e pronto para aumentar as vendas do seu mercado.
+      Nascemos para revolucionar o varejo alimentar, unindo tecnologia e praticidade.  
+      Nosso sistema é simples de usar, rápido de integrar e pronto para aumentar suas vendas.
     </p>
 
-    <div class="img-section">
-      <img src="https://cdn.pixabay.com/photo/2017/01/23/11/31/supermarket-2009400_1280.jpg" alt="Supermercado moderno">
-      <img src="https://cdn.pixabay.com/photo/2020/04/03/06/53/artificial-intelligence-4998232_1280.jpg" alt="IA no atendimento">
-      <img src="https://cdn.pixabay.com/photo/2017/08/06/11/24/supermarket-2598692_1280.jpg" alt="Chatbot de mercado">
+    <div class="galeria">
+      <img src="https://media.istockphoto.com/id/2214750916/pt/foto/retrato-de-mulher-feliz-comprando-mantimentos-no-supermercado-e-olhando-para-a-c%C3%A2mera.jpg?s=2048x2048&w=is&k=20&c=YErZ1H9A5yLTxhF0P-WgkYqGBtXLihOFGHSCkAmMDJ0=" alt="Cliente feliz no supermercado">
+      <img src="https://images.unsplash.com/photo-1601972602223-6e9b3c59c4d2?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Pagamento por celular">
+      <img src="https://images.unsplash.com/photo-1601972599720-5b64d5cc5b59?ixlib=rb-4.0.3&auto=format&fit=crop&w=800&q=80" alt="Atendimento rápido no caixa">
     </div>
 
-    <h2>Por que escolher a ShopIA?</h2>
-    <p>
-      💡 Atendimento automático via WhatsApp <br>
-      ⚙️ Integração com sistema de caixa <br>
-      🚀 Aumento nas vendas e fidelização de clientes <br>
-      🔒 Segurança e estabilidade 24h
-    </p>
-
-    <h2>Planos e Preços</h2>
-    <div class="plans">
-      <div class="plan">
+    <h2>Planos ShopIA</h2>
+    <div class="planos">
+      <div class="plano">
         <h3>Plano Básico</h3>
-        <p>Ideal para pequenos mercados — até 100 pedidos por mês.</p>
-        <p><strong>R$ 79/mês</strong></p>
-        <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20assinar%20o%20Plano%20B%C3%A1sico%20de%20R$79%20com%20100%20pedidos%20mensais." target="_blank" class="btn">Assinar Plano Básico</a>
+        <p>R$ 79/mês<br>Até 100 pedidos/mês</p>
+        <a href="https://wa.me/5584994219173?text=Olá! Quero assinar o *Plano Básico* da ShopIA (R$79/mês - 100 pedidos)." target="_blank" class="btn">Assinar</a>
       </div>
-
-      <div class="plan">
+      <div class="plano">
         <h3>Plano Avançado</h3>
-        <p>Perfeito para quem precisa de mais desempenho — até 400 pedidos por mês.</p>
-        <p><strong>R$ 150/mês</strong></p>
-        <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20assinar%20o%20Plano%20Avan%C3%A7ado%20de%20R$150%20com%20400%20pedidos%20mensais." target="_blank" class="btn">Assinar Plano Avançado</a>
+        <p>R$ 150/mês<br>Até 400 pedidos/mês</p>
+        <a href="https://wa.me/5584994219173?text=Olá! Quero assinar o *Plano Avançado* da ShopIA (R$150/mês - 400 pedidos)." target="_blank" class="btn">Assinar</a>
       </div>
-
-      <div class="plan">
+      <div class="plano">
         <h3>Plano Premium</h3>
-        <p>Pedidos ilimitados e integração completa com caixa e estoque.</p>
-        <p><strong>R$ 300/mês</strong></p>
-        <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20assinar%20o%20Plano%20Premium%20de%20R$300%20com%20pedidos%20ilimitados." target="_blank" class="btn">Assinar Plano Premium</a>
+        <p>R$ 300/mês<br>Pedidos ilimitados</p>
+        <a href="https://wa.me/5584994219173?text=Olá! Quero assinar o *Plano Premium* da ShopIA (R$300/mês - pedidos ilimitados)." target="_blank" class="btn">Assinar</a>
       </div>
     </div>
 
-    <div class="test-free">
-      <h2>Teste Grátis por 7 Dias</h2>
-      <p>Experimente a ShopIA sem compromisso e descubra como podemos revolucionar seu atendimento.</p>
-      <a href="https://wa.me/5584994219173?text=Ol%C3%A1%20quero%20testar%20a%20ShopIA%20gr%C3%A1tis%20por%207%20dias!" target="_blank" class="btn">Testar Grátis Agora</a>
-    </div>
+    <h2>Experimente grátis</h2>
+    <p>Teste o sistema completo da ShopIA por 7 dias sem compromisso!</p>
+    <a href="https://wa.me/5584994219173?text=Olá! Quero fazer o *teste grátis de 7 dias* da ShopIA!" target="_blank" class="btn">Teste grátis por 7 dias</a>
+
   </main>
 
   <footer>
-    © 2025 ShopIA — Todos os direitos reservados.
+    <div class="social-icons">
+      <a href="#"><img src="https://cdn-icons-png.flaticon.com/512/1384/1384015.png" alt="Instagram"></a>
+      <a href="https://wa.me/5584994219173" target="_blank"><img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp"></a>
+    </div>
+    <p>© 2025 ShopIA — Todos os direitos reservados.</p>
   </footer>
 </body>
 </html>
