--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 
     header {
       background-color: #000;
-      padding: 20px;
+      padding: 25px;
     }
 
     img.logo {
-      width: 190px;
+      width: 260px; /* logo maior */
     }
 
     h1 {
@@ -29,11 +29,17 @@
       margin-top: 30px;
     }
 
+    h2 {
+      color: #a855f7;
+      margin-top: 50px;
+    }
+
     p {
-      max-width: 700px;
-      margin: 20px auto;
-      line-height: 1.6;
+      max-width: 800px;
+      margin: 15px auto;
+      line-height: 1.7;
       color: #ddd;
+      font-size: 1em;
     }
 
     .galeria {
@@ -41,17 +47,23 @@
       flex-wrap: wrap;
       justify-content: center;
       gap: 15px;
-      margin: 30px auto;
+      margin: 40px auto;
       max-width: 1000px;
     }
 
     .galeria img {
-      width: 300px;
+      width: 310px;
       height: 200px;
       object-fit: cover;
       border-radius: 15px;
       border: 2px solid #a855f7;
       box-shadow: 0 0 15px #a855f7;
+    }
+
+    .secao {
+      background-color: #111;
+      padding: 40px 20px;
+      border-top: 2px solid #222;
     }
 
     .planos {
@@ -67,7 +79,7 @@
       display: inline-block;
       width: 270px;
       margin: 15px;
-      padding: 20px;
+      padding: 25px;
       color: #eee;
       box-shadow: 0 0 10px #7e22ce;
     }
@@ -99,9 +111,10 @@
 
     footer {
       margin-top: 60px;
-      padding: 20px;
+      padding: 30px;
       font-size: 0.9em;
       color: #888;
+      background: #000;
     }
 
     .social {
@@ -115,8 +128,8 @@
     }
 
     .social img {
-      width: 35px;
-      height: 35px;
+      width: 38px;
+      height: 38px;
       vertical-align: middle;
       transition: transform 0.3s;
     }
@@ -124,6 +137,43 @@
     .social img:hover {
       transform: scale(1.2);
     }
+
+    /* seção “Como funciona” */
+    .etapas {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      gap: 25px;
+      margin-top: 20px;
+    }
+
+    .etapa {
+      background: #1a1a1a;
+      border: 2px solid #a855f7;
+      border-radius: 15px;
+      width: 260px;
+      padding: 20px;
+      color: #ddd;
+      box-shadow: 0 0 10px #7e22ce;
+    }
+
+    .etapa h4 {
+      color: #c084fc;
+    }
+
+    .etapa p {
+      font-size: 0.9em;
+    }
+
+    .contato {
+      background: #111;
+      padding: 40px 0;
+    }
+
+    .contato h2 {
+      color: #c084fc;
+    }
+
   </style>
 </head>
 
@@ -135,8 +185,9 @@
   <main>
     <h1>Automação Inteligente para Supermercados</h1>
     <p>
-      A <strong>ShopIA</strong> nasceu para revolucionar o varejo alimentar, unindo tecnologia e praticidade.
-      Nosso sistema é fácil de usar, rápido de integrar e pronto para aumentar as vendas do seu mercado.
+      A <strong>ShopIA</strong> é uma plataforma de automação criada para supermercados que desejam
+      atender clientes de forma rápida e inteligente pelo WhatsApp.
+      Nosso bot cuida dos pedidos, envia informações, e integra tudo direto com o caixa.
     </p>
 
     <div class="galeria">
@@ -145,8 +196,38 @@
       <img src="img3.avif" alt="Supermercado 3">
     </div>
 
+    <section class="secao">
+      <h2>Como Funciona</h2>
+      <div class="etapas">
+        <div class="etapa">
+          <h4>1️⃣ Atendimento Automático</h4>
+          <p>O cliente envia mensagem pelo WhatsApp e o bot responde automaticamente, 24h por dia.</p>
+        </div>
+        <div class="etapa">
+          <h4>2️⃣ Pedido Feito no WhatsApp</h4>
+          <p>O cliente escolhe os produtos e finaliza o pedido em poucos cliques, direto pelo chat.</p>
+        </div>
+        <div class="etapa">
+          <h4>3️⃣ Pedido Vai Para o Caixa</h4>
+          <p>O pedido chega automaticamente no caixa ou sistema de vendas, pronto para separação e pagamento.</p>
+        </div>
+      </div>
+    </section>
+
+    <section class="secao">
+      <h2>Por que Escolher a ShopIA?</h2>
+      <p>
+        🚀 Aumente suas vendas sem precisar de atendentes o tempo todo.<br>
+        💬 Atendimento rápido e profissional no WhatsApp.<br>
+        🛒 Organize pedidos automaticamente no caixa.<br>
+        💻 Fácil de instalar e sem necessidade de conhecimento técnico.<br>
+        🧠 Inteligência artificial que entende o cliente e agiliza o atendimento.
+      </p>
+    </section>
+
     <section class="planos">
-      <h2 style="color:#c084fc;">Nossos Planos</h2>
+      <h2>Nossos Planos</h2>
+
       <div class="plano">
         <h3>Plano Básico</h3>
         <p>💰 R$79/mês<br>✅ 100 pedidos/mês</p>
@@ -172,6 +253,12 @@
       </div>
     </section>
 
+    <section class="contato">
+      <h2>Entre em Contato</h2>
+      <p>Quer saber mais ou tirar dúvidas? Fale com nossa equipe:</p>
+      <a href="https://wa.me/5584994219173" target="_blank" class="btn">Falar no WhatsApp</a>
+    </section>
+
     <div class="social">
       <a href="https://wa.me/5584994219173" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
@@ -180,7 +267,6 @@
         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
       </a>
     </div>
-
   </main>
 
   <footer>
