Update company name and add WhatsApp button
Updated company name to 'ShopIA Ltda' throughout the document and added a floating WhatsApp button for user interaction.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>ShopIA - Automação para Supermercados</title>
+  <title>ShopIA Ltda - Automação para Supermercados</title>
   <link rel="icon" type="image/png" href="logo.png" />
   <style>
     body {
@@ -20,7 +20,7 @@
     }
 
     img.logo {
-      width: 260px; /* logo maior */
+      width: 260px;
     }
 
     h1 {
@@ -138,7 +138,6 @@
       transform: scale(1.2);
     }
 
-    /* seção “Como funciona” */
     .etapas {
       display: flex;
       flex-wrap: wrap;
@@ -174,6 +173,31 @@
       color: #c084fc;
     }
 
+    /* botão flutuante do WhatsApp */
+    .whatsapp-float {
+      position: fixed;
+      width: 65px;
+      height: 65px;
+      bottom: 25px;
+      right: 25px;
+      background-color: #25d366;
+      color: #fff;
+      border-radius: 50px;
+      text-align: center;
+      font-size: 35px;
+      box-shadow: 0 0 20px rgba(0,0,0,0.4);
+      z-index: 1000;
+      transition: transform 0.3s ease;
+    }
+
+    .whatsapp-float:hover {
+      transform: scale(1.15);
+    }
+
+    .whatsapp-float img {
+      width: 40px;
+      margin-top: 12px;
+    }
   </style>
 </head>
 
@@ -185,9 +209,8 @@
   <main>
     <h1>Automação Inteligente para Supermercados</h1>
     <p>
-      A <strong>ShopIA</strong> é uma plataforma de automação criada para supermercados que desejam
-      atender clientes de forma rápida e inteligente pelo WhatsApp.
-      Nosso bot cuida dos pedidos, envia informações, e integra tudo direto com o caixa.
+      A <strong>ShopIA Ltda</strong> oferece automação completa para supermercados, com atendimento automático via WhatsApp,
+      pedidos integrados ao caixa e inteligência artificial para aumentar suas vendas.
     </p>
 
     <div class="galeria">
@@ -201,15 +224,15 @@
       <div class="etapas">
         <div class="etapa">
           <h4>1️⃣ Atendimento Automático</h4>
-          <p>O cliente envia mensagem pelo WhatsApp e o bot responde automaticamente, 24h por dia.</p>
+          <p>O cliente envia mensagem e o bot responde automaticamente, 24h por dia.</p>
         </div>
         <div class="etapa">
           <h4>2️⃣ Pedido Feito no WhatsApp</h4>
-          <p>O cliente escolhe os produtos e finaliza o pedido em poucos cliques, direto pelo chat.</p>
+          <p>O cliente escolhe produtos e finaliza o pedido pelo chat.</p>
         </div>
         <div class="etapa">
           <h4>3️⃣ Pedido Vai Para o Caixa</h4>
-          <p>O pedido chega automaticamente no caixa ou sistema de vendas, pronto para separação e pagamento.</p>
+          <p>O pedido chega direto ao caixa, pronto para separação e pagamento.</p>
         </div>
       </div>
     </section>
@@ -217,11 +240,11 @@
     <section class="secao">
       <h2>Por que Escolher a ShopIA?</h2>
       <p>
-        🚀 Aumente suas vendas sem precisar de atendentes o tempo todo.<br>
-        💬 Atendimento rápido e profissional no WhatsApp.<br>
-        🛒 Organize pedidos automaticamente no caixa.<br>
-        💻 Fácil de instalar e sem necessidade de conhecimento técnico.<br>
-        🧠 Inteligência artificial que entende o cliente e agiliza o atendimento.
+        🚀 Aumente suas vendas com atendimento 24h no WhatsApp.<br>
+        💬 Sem precisar de atendentes o tempo todo.<br>
+        🛒 Pedidos automáticos e organizados.<br>
+        💻 Fácil de usar e instalar.<br>
+        🤖 Tecnologia de inteligência artificial exclusiva.
       </p>
     </section>
 
@@ -231,19 +254,19 @@
       <div class="plano">
         <h3>Plano Básico</h3>
         <p>💰 R$79/mês<br>✅ 100 pedidos/mês</p>
-        <a href="https://wa.me/5584994219173?text=Olá!%20Tenho%20interesse%20no%20Plano%20Básico%20da%20ShopIA%20de%20R$79" class="btn">Assinar</a>
+        <a href="https://wa.me/5584994219173?text=Olá!%20Tenho%20interesse%20no%20Plano%20Básico%20da%20ShopIA%20Ltda%20de%20R$79" class="btn">Assinar</a>
       </div>
 
       <div class="plano">
         <h3>Plano Avançado</h3>
         <p>💰 R$150/mês<br>✅ 400 pedidos/mês</p>
-        <a href="https://wa.me/5584994219173?text=Olá!%20Quero%20assinar%20o%20Plano%20Avançado%20da%20ShopIA%20de%20R$150" class="btn">Assinar</a>
+        <a href="https://wa.me/5584994219173?text=Olá!%20Quero%20assinar%20o%20Plano%20Avançado%20da%20ShopIA%20Ltda%20de%20R$150" class="btn">Assinar</a>
       </div>
 
       <div class="plano">
         <h3>Plano Premium</h3>
         <p>💰 R$300/mês<br>🚀 Pedidos ilimitados</p>
-        <a href="https://wa.me/5584994219173?text=Olá!%20Desejo%20assinar%20o%20Plano%20Premium%20da%20ShopIA%20de%20R$300" class="btn">Assinar</a>
+        <a href="https://wa.me/5584994219173?text=Olá!%20Desejo%20assinar%20o%20Plano%20Premium%20da%20ShopIA%20Ltda%20de%20R$300" class="btn">Assinar</a>
       </div>
 
       <div class="plano" style="border-color:#22c55e;box-shadow:0 0 10px #22c55e;">
@@ -263,14 +286,19 @@
       <a href="https://wa.me/5584994219173" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
       </a>
-      <a href="#" target="_blank">
+      <a href="https://instagram.com/shopialtda" target="_blank">
         <img src="https://cdn-icons-png.flaticon.com/512/174/174855.png" alt="Instagram">
       </a>
     </div>
   </main>
 
   <footer>
-    © 2025 ShopIA — Todos os direitos reservados.
+    © 2025 ShopIA Ltda — Todos os direitos reservados.
   </footer>
+
+  <!-- botão flutuante do WhatsApp -->
+  <a href="https://wa.me/5584994219173?text=Olá!%20Quero%20saber%20mais%20sobre%20a%20ShopIA%20Ltda!" class="whatsapp-float" target="_blank">
+    <img src="https://cdn-icons-png.flaticon.com/512/733/733585.png" alt="WhatsApp">
+  </a>
 </body>
 </html>
