Add navigation menu to index.html
Added navigation menu with links to home and about pages.

--- a/index.html
+++ b/index.html
@@ -23,6 +23,23 @@
       width: 260px;
     }
 
+    nav {
+      background: #111;
+      padding: 12px 0;
+    }
+
+    nav a {
+      color: #c084fc;
+      text-decoration: none;
+      margin: 0 15px;
+      font-weight: bold;
+      transition: color 0.3s;
+    }
+
+    nav a:hover {
+      color: #fff;
+    }
+
     h1 {
       color: #c084fc;
       font-size: 2.3em;
@@ -206,6 +223,12 @@
     <img src="logo.png" alt="ShopIA logo" class="logo">
   </header>
 
+  <!-- 🟣 MENU DE NAVEGAÇÃO -->
+  <nav>
+    <a href="index.html">🏠 Início</a>
+    <a href="quem-somos.html">👥 Quem Somos</a>
+  </nav>
+
   <main>
     <h1>Automação Inteligente para Supermercados</h1>
     <p>
@@ -254,19 +277,19 @@
       <div class="plano">
         <h3>Plano Básico</h3>
         <p>💰 R$79/mês<br>✅ 100 pedidos/mês</p>
-        <a href="https://wa.me/5584994219173?text=Olá!%20Tenho%20interesse%20no%20Plano%20Básico%20da%20ShopIA%20Ltda%20de%20R$79" class="btn">Assinar</a>
+        <a href="https://wa.me/5584994219173?text=Olá!%20Tenho%20interesse%20no%20Plano%20Básico%20da%20ShopIA%20de%20R$79" class="btn">Assinar</a>
       </div>
 
       <div class="plano">
         <h3>Plano Avançado</h3>
         <p>💰 R$150/mês<br>✅ 400 pedidos/mês</p>
-        <a href="https://wa.me/5584994219173?text=Olá!%20Quero%20assinar%20o%20Plano%20Avançado%20da%20ShopIA%20Ltda%20de%20R$150" class="btn">Assinar</a>
+        <a href="https://wa.me/5584994219173?text=Olá!%20Quero%20assinar%20o%20Plano%20Avançado%20da%20ShopIA%20de%20R$150" class="btn">Assinar</a>
       </div>
 
       <div class="plano">
         <h3>Plano Premium</h3>
         <p>💰 R$300/mês<br>🚀 Pedidos ilimitados</p>
-        <a href="https://wa.me/5584994219173?text=Olá!%20Desejo%20assinar%20o%20Plano%20Premium%20da%20ShopIA%20Ltda%20de%20R$300" class="btn">Assinar</a>
+        <a href="https://wa.me/5584994219173?text=Olá!%20Desejo%20assinar%20o%20Plano%20Premium%20da%20ShopIA%20de%20R$300" class="btn">Assinar</a>
       </div>
 
       <div class="plano" style="border-color:#22c55e;box-shadow:0 0 10px #22c55e;">
